tests/examples/importing/errors/cyclic_import/service_b.si
import "service_a.si"

service B {

    deployment {
        version="0.0.1"
    }

    api {
        bool check_b(str some_param)
    }
}
